--- a/src/assets/css/tailwind.output.css
+++ b/src/assets/css/tailwind.output.css
@@ -1677,6 +1677,11 @@ select {
   background-color: rgb(235 245 255 / var(--tw-bg-opacity));
 }
 
+.bg-coral-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(223 44 49 / var(--tw-bg-opacity));
+}
+
 .bg-darkblue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(0 96 217 / var(--tw-bg-opacity));
@@ -1808,21 +1813,6 @@ select {
 .bg-yellow-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(159 88 10 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 36 36 / var(--tw-bg-opacity));
-}
-
-.bg-coral-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 54 59 / var(--tw-bg-opacity));
-}
-
-.bg-coral-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(223 44 49 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-10 {
